--- a/front-mjail/src/index.html
+++ b/front-mjail/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>FrontMjail</title>
+        <title>Ɱail</title>
+        
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/png" href="assets/favicon.png" />
     </head>
     <body>
     <app-root></app-root>
